OOFSWIG/Tests/Errors/unterm_comment.i
%module name
%{

%}

/* This is a comment

